--- a/test/channel/CMakeLists.txt
+++ b/test/channel/CMakeLists.txt
@@ -5,9 +5,7 @@
 # (See accompanying file LICENSE_1_0.txt or copy at
 # http://www.boost.org/LICENSE_1_0.txt)
 #
-list(APPEND _boost_gil_test_headers ${CMAKE_CURRENT_SOURCE_DIR}/channel_test_fixture.hpp)
-
-foreach(name
+foreach(_name
   channel_concepts
   channel_test_fixture
   channel_traits
@@ -17,14 +15,17 @@ foreach(name
   algorithm_channel_invert
   algorithm_channel_multiply
   algorithm_channel_relation)
+  set(_target test_core_${_name})
 
-  add_executable(test_core_${name} "")
-  target_sources(test_core_${name} PRIVATE ${name}.cpp)
-  target_link_libraries(test_core_${name}
+  add_executable(${_target} "")
+  target_sources(${_target} PRIVATE ${_name}.cpp)
+  target_link_libraries(${_target}
     PRIVATE
       gil_compile_options
       gil_include_directories
-      Boost::disable_autolinking
-      Boost::unit_test_framework)
-  add_test(test.core.${name} test_core_${name})
+      gil_dependencies)
+  add_test(test.core.${_name} ${_target})
+
+  unset(_name)
+  unset(_target)
 endforeach()
