[toolbox] Move metafunctions required in core IO to core
First stab at removing the confusing core IO dependency on toolbox
and dynamic_image extensions, moving four metafunctions
together with their tests:
get_pixel_type, is_bit_aligned, is_homogeneous, pixel_bit_size.

Notice, the core IO dependency on the extensions still remains
but it is not entirely clear:
core IO uses any_image_view which seems to be pulled from
dynamic_image indirectly through toolbox headers.

If IO relies on any_image and any_image_view,
those should be moved to core as well.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,3 +49,4 @@ add_subdirectory(algorithm)
 add_subdirectory(channel)
 add_subdirectory(image_view)
 add_subdirectory(point)
+add_subdirectory(utility)
