--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -81,7 +81,9 @@ before_build:
   - cd c:\projects\boost
   # List all (recursive) dependencies explicitly to control any new additions
   - git submodule --quiet update --init tools/build
+  - git submodule --quiet update --init tools/boost_install
   - git submodule --quiet update --init tools/boostdep
+  - git submodule --quiet update --init libs/headers
   ## Direct
   - git submodule --quiet update --init libs/algorithm
   - git submodule --quiet update --init libs/array
