Switch from header-only to linked boost_unit_test_framework
The linked variant of the Boost.UTF seems recommended.
It may help to avoid mysterious run-time error on Mac OS:
    boost::runtime::access_to_missing_argument:
    There is no argument provided for parameter color_output
It also may speed up compilation during CI builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,9 +101,12 @@ message(STATUS "Boost.GIL: Using Boost_LIBRARY_DIRS=${Boost_LIBRARY_DIRS}")
 
 target_link_libraries(gil_dependencies
   INTERFACE
-    Boost::disable_autolinking
     Boost::filesystem
     Boost::unit_test_framework)
+
+target_compile_definitions(gil_dependencies
+  INTERFACE
+    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:BOOST_TEST_DYN_LINK>)
 
 #-----------------------------------------------------------------------------
 # Dependency: libpng, libjpeg, libtiff via Vcpkg or Conan
