--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,12 @@ option(GIL_ENABLE_EXT_TOOLBOX "Enable Toolbox extension, tests and examples" ON)
 option(GIL_USE_CONAN "Use Conan to install dependencies" OFF)
 option(GIL_USE_CLANG_TIDY "Set CMAKE_CXX_CLANG_TIDY property on targets to enable clang-tidy linting" OFF)
 option(GIL_DOWNLOAD_FINDBOOST "Download FindBoost.cmake from latest CMake release" OFF)
+set(CMAKE_CXX_STANDARD 11 CACHE STRING "C++ standard version to use (default is 11)")
 
 #-----------------------------------------------------------------------------
 # Version
 #-----------------------------------------------------------------------------
-file(STRINGS
-  include/boost/gil/version.hpp
+file(STRINGS include/boost/gil/version.hpp
   BOOST_GIL_LIB_VERSION
   REGEX "#define BOOST_GIL_LIB_VERSION ")
 
@@ -44,16 +44,14 @@ project(Boost.GIL
 message(STATUS "Boost.GIL: Version ${PROJECT_VERSION}")
 list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_BINARY_DIR}/cmake)
 
-
 #-----------------------------------------------------------------------------
 # C++ language version and compilation flags
 #-----------------------------------------------------------------------------
-set(CMAKE_CXX_STANDARD 11)
+message(STATUS "Boost.GIL: Require C++${CMAKE_CXX_STANDARD}")
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_library(gil_compile_options INTERFACE)
-target_compile_features(gil_compile_options INTERFACE cxx_std_11)
 
 # See https://cmake.org/pipermail/cmake/2018-December/068716.html
 if(MSVC)
