--- a/example/cmake/CMakeSettings.json
+++ b/example/cmake/CMakeSettings.json
@@ -24,6 +24,7 @@
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "OFF" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "OFF" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
+        { "name": "GIL_BUILD_HEADERS_TESTS", "value": "OFF" },
         { "name": "GIL_DOWNLOAD_FINDBOOST", "value": "ON" },
         { "name": "GIL_USE_CONAN", "value": "ON" }
       ]
@@ -44,6 +45,7 @@
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "OFF" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "OFF" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
+        { "name": "GIL_BUILD_HEADERS_TESTS", "value": "OFF" },
         { "name": "GIL_DOWNLOAD_FINDBOOST", "value": "ON" },
         { "name": "GIL_USE_CONAN", "value": "ON" }
       ]
@@ -63,6 +65,7 @@
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "OFF" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "OFF" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
+        { "name": "GIL_BUILD_HEADERS_TESTS", "value": "OFF" },
         { "name": "GIL_DOWNLOAD_FINDBOOST", "value": "ON" },
         { "name": "GIL_USE_CONAN", "value": "ON" }
       ]
@@ -82,6 +85,7 @@
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "OFF" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "OFF" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
+        { "name": "GIL_BUILD_HEADERS_TESTS", "value": "OFF" },
         { "name": "GIL_DOWNLOAD_FINDBOOST", "value": "ON" },
         { "name": "GIL_USE_CONAN", "value": "ON" }
       ]
